# Random-Access-Machine-Simulator

./: .cproject  .gitignore  .project  CMakeLists.txt  MODIFICACIÓN.txt  Makefile  README.md
docs/: 3_8456-example.html  annotated.html  arithmetical-logical-unit_8h_source.html  class_arithmetical_logical_unit-members.html  class_arithmetical_logical_unit.html  class_control_unit-members.html  class_control_unit.html  class_data_memory-members.html  class_data_memory.html  class_input_tape-members.html  class_input_tape.html  class_instruction-members.html  class_instruction.html  class_memory_unit-members.html  class_memory_unit.html  class_operand-members.html  class_operand.html  class_output_tape-members.html  class_output_tape.html  class_program_memory-members.html  class_program_memory.html  class_random_access_machine-members.html  class_random_access_machine.html  class_tape_unit-members.html  class_tape_unit.html  class_this.html  classes.html  classthis.html  control-unit_8h_source.html  data-memory_8h_source.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6a9487412907f0bd9cea1188c1c9234b.html  dir_7033be767f76884c48c7fb8956b9fc53.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_be6c53fb3a17475f088d611874039e1c.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f1f1266d834b5d63972fda2acecfde4b.html  dir_f89abcb304c928c7d889aa5625570de5.html  examples.html  (+18 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  pages_0.js  related_0.js  searchdata.js
include/: arithmetical-logical-unit.h  control-unit.h  custom-exceptions.h  data-memory.h  float-data-memory.h  input-tape.h  instruction.h  memory-unit.h  operand.h  output-tape.h  program-memory.h  random-access-machine.h  tape-unit.h
src/: arithmetical-logical-unit.cpp  control-unit.cpp  data-memory.cc  data-memory.cpp  float-data-memory.cpp  input-tape.cpp  instruction.cpp  main.cpp  memory-unit.cpp  operand.cpp  output-tape.cpp  program-memory.cpp  random-access-machine.cpp  tape-unit.cpp
test/: data-mem
test/error_test_ram/: error_test1.ram  error_test2.ram  error_test3.ram  error_test4.ram
test/program/: input_tape.tape  pow.ram
test/tape_test/: otest.tape  otest1.tape  otest4.tape  otest7.tape  test1.tape  test2.tape  test4.tape
test/test-main/: alu-main.cpp  cu-main.cpp  data-main.cc  data-main.cpp  instruction-main.cpp  mem-unit.cpp  operand-main.cpp  prog-main.cpp  ram-main.cpp  tape-main.cpp
test/tests_ram/: test1.ram
